samples/learningOverview/invalid/R11.dita
<?xml version="1.0" encoding="UTF-8"?>
<learningOverview id="lo1" xml:lang="en">
  <title>Main Learning Overview Title</title>
  <prolog/>
  <learningOverviewbody>
    <lcIntro><title>Intro Title</title><p>Intro text.</p></lcIntro>
    <lcAudience><title>Audience Title</title>Audience text.</lcAudience>
    <lcDuration>
      <title>Duration Title</title>
      <lcTime>1 hour</lcTime>
    </lcDuration>
    <lcObjectives><title>Objectives Title</title><lcObjectivesGroup><lcObjective>Objective 1</lcObjective></lcObjectivesGroup></lcObjectives>
  </learningOverviewbody>
</learningOverview>